--- a/style.css
+++ b/style.css
@@ -3,12 +3,26 @@ body {
 }
 
 #container {
-    width: 600px;
-    height: 400px;
+    width: 100%;
+    height: 80%;
 }
 
 /* Tweaking API default styles */
 .CodeMirror {
+    border-top: 2px solid black; 
+    border-bottom: 1px solid black;
+    border-radius: 4px;
     font-family: monospace, 'Courier New', Courier;
-    font-size: 22px;
+    font-size: 18px;
+}
+
+.CodeMirror-gutter {
+    min-width: 1.25em; 
+    cursor: pointer;
+}
+
+.CodeMirror-foldgutter {
+ color: black;
+ background-color: red;
+ font-size: 18px;
 }
