--- a/style.css
+++ b/style.css
@@ -1,19 +1,78 @@
 body {
+ /*   display: flex;
+    flex-direction: column;
+    justify-content: space-between;*/
     background-color: grey;
-    width: 800px;
-    height: 1200px;
+    width: 100%;
+    min-height: 825px;
+    margin: auto;
+}
+
+#topbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+/*    padding: 4px;*/
+    width: 100%;
+    min-height: 40px;
+    height: 100%;
+    background-color: orange;
+/*    border: 2px solid pink;*/
+}
+
+#logopane {
+    min-height: 36px;
+    width: 50%;
+    height: 100%;
+    background-color: cyan;
+/*    border: 2px solid lime;*/
+}
+
+#actionpane {
+    /*display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 4px; */
+    min-height: 36px;
+    width: 50%;
+    height: 100%;
+        background-color: brown;
+
+/*    border: 2px solid lime;*/
+}
+
+
+#middlebar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: grey;
+    width: 100%;
+    height: 1000px;
+    background-color: green;
+/*    border: 2px solid red;*/
+}
+
+
+#fileexplorer {
+    width: 25%;
+    height: 100%;
+    background-color: beige;
+/*    border: 2px solid cyan;*/
 }
 
 #container {
-    width: 100%;
+    width: 75%;
     height: 100%;
 }
 
 /* Tweaking API default styles */
 .CodeMirror {
-    border-radius: 8px;
+/*    border-radius: 8px;*/
     font-family: monospace, 'Courier New', Courier;
     font-size: 18px;
+    height: 100%;
+    width: 100%;
 }
 
 .CodeMirror-gutter {
