--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,7 @@ html, body, #wrapper {
 }
 
 #logo-text {
+    color: lime;
     font-family: monospace;
     font-size: 32px;
     margin: auto;
@@ -66,8 +67,9 @@ html, body, #wrapper {
 /*    margin: auto;*/
     cursor: pointer;
     margin-right: 10px;
-    margin-left: 10px;
-    border-radius: 18px;
+/*    margin-left: 10px;*/
+/*    border-radius: 18px;*/
+    font-weight: bold;
 
 }
 
@@ -80,6 +82,9 @@ html, body, #wrapper {
     background-color: rgb(54, 140, 201); 
     border:none;
     color: white;
+    font-weight: bold;
+    cursor: pointer;
+    margin-right: 10px;
 }
 
 /*#font-size-selector {
@@ -96,6 +101,8 @@ html, body, #wrapper {
     padding: 0px 10px 0px 10px;
     height: 100%;
     width: 20%;
+    font-family: monospace;
+    font-size: 18px;
     background-color: rgb(37, 15, 102);;
 }
 
@@ -118,10 +125,10 @@ html, body, #wrapper {
 }
 
 
-#fileexplorer {
+#fileexplorer-wrapper {
 /*    float: left;*/
 /*    min-width: 200px;*/
-    width: 25%;
+    width: 20%;
 /*    min-height: 400px;*/
 /*    height: 100%;*/
     background-color: yellow;
@@ -130,7 +137,7 @@ html, body, #wrapper {
 
 #container {
     position: relative;
-    width: 75%;
+    width: 80%;
 /*    height: 100%;*/
 }
 
@@ -155,8 +162,8 @@ html, body, #wrapper {
 /* Tweaking API default styles */
 .CodeMirror {
 /*    border-radius: 8px;*/
-    font-family: monospace, 'Courier New', Courier;
-/*    font-size: 18px;*/
+/*    font-family: monospace;*/
+    font-size: 16px;
     height: 100%;
 /*    width: 100%;*/
 }
