--- a/public/style.css
+++ b/public/style.css
@@ -21,14 +21,15 @@ html, body, #wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-    width: 99%;
+    width: 98%;
 /*    top:1px;*/
 /*    bottom: 1px;*/
     height: 40px;
 /*    background-color: rgb(15, 14, 69);*/
     background-color: rgb(15, 14, 69);;
-    box-shadow: 0 0 2px 2px rgb(201, 121, 16) inset;
+    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
     border-radius: 6px;
+    padding-right: 6px;
     margin: 2px 0px 0px 6px;
 
 /*    border: 2px solid pink;*/
@@ -36,18 +37,19 @@ html, body, #wrapper {
 
 #logopane {
 /*    min-height: 36px;*/
-    width: 25%;
+    width: 35%;
     height: 100%;
 /*    background-color: rgb(15, 14, 69);;*/
 /*    border: 2px solid lime;*/
 }
 
 #logo-text {
-    color: lime;
+    color: rgb(201, 121, 16);
     font-family: monospace;
     font-size: 32px;
     margin: auto;
     padding-left: 20px;
+    text-shadow: 4px 4px 8px #FF0000;
 /*    border: 2px solid lime;*/
 }
 
@@ -55,10 +57,11 @@ html, body, #wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 75%;
+    width: 65%;
     max-width: 540px;
 /*    max-width: 800px;*/
     height: 100%;
+
 }
 
 .action-btn {
@@ -66,7 +69,6 @@ html, body, #wrapper {
     color: white;
     padding: 0px 14px;
     text-align: center;
-    font-weight: bold;
     text-decoration: none;
     display: inline-block;
     font-size: 12px;
@@ -77,13 +79,13 @@ html, body, #wrapper {
     font-weight: bold;
      border-radius: 8px;
     background-color: rgb(15, 14, 69);;
-    box-shadow: 0 0 2px 2px rgb(201, 121, 16) inset;
+    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
     border-radius: 6px;
-
+    text-shadow: 2px 2px 8px #FF0000;
 }
 
 #btn-run { 
-    color: lime; 
+    color: rgb(201, 121, 16);; 
     background-color: rgb(15, 14, 69);
     box-shadow: 0 0 2px 2px lime inset;
 
@@ -92,7 +94,7 @@ html, body, #wrapper {
 #btn-download { background-color: orange; } 
 
 .action-selector {
-    padding: 0px 24px;
+    padding: 0px 8px;
     background-color: rgb(54, 140, 201); 
     border-radius: 4px;
     color: rgb(201, 121, 16);
@@ -102,7 +104,14 @@ html, body, #wrapper {
     background-color: rgb(15, 14, 69);;
     box-shadow: 0 0 2px 2px rgb(201, 121, 16) inset;
     border-radius: 6px;
+    text-shadow: 2px 2px 8px #FF0000;
 
+}
+
+
+#runicon {
+    color: lime;
+    text-shadow: 2px 2px px lime;
 }
 
 /*#font-size-selector {
@@ -147,7 +156,7 @@ html, body, #wrapper {
 #fileexplorer-wrapper {
 /*    float: left;*/
 /*    min-width: 200px;*/
-    width: 20%;
+    width: 2%;
 /*    min-height: 400px;*/
     height: 99%;
     margin: 6px 0px 0px 6px;
@@ -155,13 +164,13 @@ html, body, #wrapper {
 
 
     background-color: rgb(15, 14, 69);;
-    box-shadow: 0 0 2px 2px rgb(201, 121, 16) inset;
+    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
     border-radius: 6px;
 }
 
 #container {
     position: relative;
-    width: 80%;
+    width: 98%;
 /*    height: 100%;*/
 }
 
@@ -174,9 +183,9 @@ html, body, #wrapper {
     bottom: 30%;
     width: 98%;
     background-color: black;;
-    box-shadow: 0 0 2px 2px rgb(201, 121, 16);
+    box-shadow: 0 0 2px 2px rgb(52, 82, 158);
     border-radius: 6px;
-    margin: 8px 0px 0px 8px;
+    margin: 8px 0px 2px 10px;
 }
 #terminal {
     /*display: flex;
@@ -194,11 +203,19 @@ html, body, #wrapper {
     background-color: black;
     overflow: auto;
     background-color: black;;
-    box-shadow: 0 0 2px 2px rgb(201, 121, 16) inset;
+    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
     border-radius: 6px;
     margin: 0px 8px;
 /*    max-height: 100%;*/
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
 }
+
+#terminal_screen::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
 
 
 
