--- a/public/style.css
+++ b/public/style.css
@@ -44,12 +44,12 @@ html, body, #wrapper {
 }
 
 #logo-text {
-    color: rgb(201, 121, 16);
+    color: rgb(64, 194, 237);
     font-family: monospace;
     font-size: 32px;
     margin: auto;
     padding-left: 20px;
-    text-shadow: 4px 4px 8px #FF0000;
+    text-shadow: 4px 4px 8px rgb(250, 150, 0);
 /*    border: 2px solid lime;*/
 }
 
@@ -81,53 +81,59 @@ html, body, #wrapper {
     background-color: rgb(15, 14, 69);;
     box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
     border-radius: 6px;
-    text-shadow: 2px 2px 8px 8px #FF0000;
+    text-shadow: 1px 1px 4px 4px rgb(52, 82, 158);
 }
 
 #btn-run { 
-    color: rgb(201, 121, 16);
+    color: lime;
     background-color: rgb(15, 14, 69);
-    box-shadow: 0 0 2px 2px lime inset;
+    box-shadow: 0 0 2px 2px rgb(64, 194, 237) inset;
 }
 
 #btn-stop { 
-    color: rgb(201, 121, 16);; 
+    color: red;
     background-color: rgb(15, 14, 69);
-    box-shadow: 0 0 2px 2px red inset;
+    box-shadow: 0 0 2px 2px rgb(64, 194, 237) inset;
 }
 
-#btn-download { 
-    background-color: orange; 
-} 
+#btn-run:disabled,
+#btn-run[disabled]{
+    color: gray;
+    box-shadow: 0 0 2px 2px gray inset;
+    cursor: wait;
+}
+
+#btn-stop:disabled,
+#btn-stop[disabled]{
+    color: gray;
+    box-shadow: 0 0 2px 2px gray inset;
+    cursor: wait;
+}
+
 
 .action-selector {
     padding: 0px 8px;
-    background-color: rgb(54, 140, 201); 
-    border-radius: 4px;
-    color: rgb(201, 121, 16);
+    color: rgb(64, 194, 237);
     font-weight: bold;
     cursor: pointer;
     margin: 6px;
     background-color: rgb(15, 14, 69);;
-    box-shadow: 0 0 2px 2px rgb(201, 121, 16) inset;
+    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
     border-radius: 6px;
-    text-shadow: 2px 2px 8px #FF0000;
+    text-shadow: 1px 1px 4px ;
 
 }
 
 
 #runicon {
-    color: lime;
-    font-size: 1.2em;
-/*    text-shadow: 2px 2px 2px 2px lime;*/
+    color: inherit;
+    font-size: 1.4em;
 }
 
 #stopicon {
-    color: red;
-    font-size: 1.8em;
-/*    text-shadow: 0px 0px 2px 2px red;*/
+    color: inherit;
+    font-size: 1em;
 }
-
 
 
 #core {
@@ -136,13 +142,7 @@ html, body, #wrapper {
     justify-content: space-between;
     top: 40px;
     bottom: 0;
-/*    min-height: 400px;*/
     width: 100%;
-/*    height: 100%;*/
-/*    background-color: green;*/
-/*    margin-top: 10px;*/
-/*    border: 2px solid red;*/
-
 }
 
 
@@ -153,8 +153,6 @@ html, body, #wrapper {
 /*    min-height: 400px;*/
     height: 99%;
     margin: 6px 0px 0px 6px;
-
-
 
     background-color: rgb(15, 14, 69);;
     box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
