--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@ html, body, #wrapper {
 /*    display: flex;
     flex-direction: column;
     justify-content: space-between;*/
-    background-color: rgb(15, 14, 69);
+    background-color: rgb(27, 28, 27);
     width: 100%;
 /*    min-height: 400px;*/
     height: 100%;
@@ -25,9 +25,9 @@ html, body, #wrapper {
 /*    top:1px;*/
 /*    bottom: 1px;*/
     height: 40px;
-/*    background-color: rgb(15, 14, 69);*/
-    background-color: rgb(15, 14, 69);;
-    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
+/*    background-color: rgb(27, 28, 27);*/
+    background-color: rgb(27, 28, 27);;
+    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
     border-radius: 6px;
     padding-right: 6px;
     margin: 2px 0px 0px 6px;
@@ -36,20 +36,33 @@ html, body, #wrapper {
 }
 
 #logopane {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
 /*    min-height: 36px;*/
-    width: 35%;
+    width: 20%;
     height: 100%;
-/*    background-color: rgb(15, 14, 69);;*/
+/*    background-color: rgb(27, 28, 27);;*/
+/*    border: 2px solid lime;*/
+}
+
+#logo {
+    padding-top: 2px;
+    padding-left: 20px;
+    width: 18%;
+    height: 90%;
 /*    border: 2px solid lime;*/
 }
 
 #logo-text {
-    color: rgb(64, 194, 237);
+    color: rgb(253, 150, 49);
     font-family: monospace;
     font-size: 32px;
     margin: auto;
-    padding-left: 20px;
-    text-shadow: 4px 4px 8px rgb(250, 150, 0);
+    padding-left: 5px;
+    text-shadow: 1px 1px 2px rgb(253, 150, 49);
+/*    border: 2px solid lime;*/
+
 /*    border: 2px solid lime;*/
 }
 
@@ -77,50 +90,50 @@ html, body, #wrapper {
     margin: 6px;
 /*    margin-left: 10px;*/
     font-weight: bold;
-     border-radius: 8px;
-    background-color: rgb(15, 14, 69);;
-    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
+    border-radius: 8px;
+    background-color: rgb(27, 28, 27);;
+    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
     border-radius: 6px;
-    text-shadow: 1px 1px 4px 4px rgb(52, 82, 158);
+/*    text-shadow: 1px 1px 4px 4px rgb(253, 150, 49);*/
 }
 
 #btn-run { 
     color: lime;
-    background-color: rgb(15, 14, 69);
-    box-shadow: 0 0 2px 2px rgb(64, 194, 237) inset;
+    background-color: rgb(27, 28, 27);
+    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
 }
 
 #btn-stop { 
     color: red;
-    background-color: rgb(15, 14, 69);
-    box-shadow: 0 0 2px 2px rgb(64, 194, 237) inset;
+    background-color: rgb(27, 28, 27);
+    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
 }
 
 #btn-run:disabled,
 #btn-run[disabled]{
     color: gray;
-    box-shadow: 0 0 2px 2px gray inset;
+    box-shadow: 0 0 1px 1px gray inset;
     cursor: wait;
 }
 
 #btn-stop:disabled,
 #btn-stop[disabled]{
     color: gray;
-    box-shadow: 0 0 2px 2px gray inset;
+    box-shadow: 0 0 1px 1px gray inset;
     cursor: wait;
 }
 
 
 .action-selector {
     padding: 0px 8px;
-    color: rgb(64, 194, 237);
+    color: rgb(253, 150, 49);
     font-weight: bold;
     cursor: pointer;
     margin: 6px;
-    background-color: rgb(15, 14, 69);;
-    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
+    background-color: rgb(27, 28, 27);;
+    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
     border-radius: 6px;
-    text-shadow: 1px 1px 4px ;
+/*    text-shadow: 1px 1px 2px ;*/
 
 }
 
@@ -154,8 +167,8 @@ html, body, #wrapper {
     height: 99%;
     margin: 6px 0px 0px 6px;
 
-    background-color: rgb(15, 14, 69);;
-    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
+    background-color: rgb(27, 28, 27);;
+    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
     border-radius: 6px;
 }
 
@@ -174,7 +187,7 @@ html, body, #wrapper {
     bottom: 30%;
     width: 97%;
     background-color: black;;
-    box-shadow: 0 0 2px 2px rgb(52, 82, 158);
+    box-shadow: 0 0 1px 1px rgb(253, 150, 49);
     border-radius: 6px;
     margin: 8px 0px 2px 10px;
 }
@@ -185,7 +198,7 @@ html, body, #wrapper {
     bottom: 0;
     height: 29%;
     width: 100%;
-    background-color: rgb(15, 14, 69);
+    background-color: rgb(27, 28, 27);
 /*    border: 2px solid green;*/
 }
 
@@ -194,7 +207,7 @@ html, body, #wrapper {
     height: 90%;
     overflow: auto;
     background-color: black;;
-    box-shadow: 0 0 2px 2px rgb(52, 82, 158) inset;
+    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
     border-radius: 6px;
     margin: 0px 10px 0px;
 /*    margin: auto;*/
