--- a/public/style.css
+++ b/public/style.css
@@ -21,17 +21,16 @@ html, body, #wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-    width: 97%;
+    width: 98%;
 /*    top:1px;*/
 /*    bottom: 1px;*/
     height: 40px;
 /*    background-color: rgb(27, 28, 27);*/
     background-color: rgb(27, 28, 27);;
-    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
-    border-radius: 6px;
-    padding-right: 6px;
+/*    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;*/
+/*    border-radius: 8px;*/
+/*    padding-right: -20px;*/
     margin: 2px 0px 0px 6px;
-
 /*    border: 2px solid pink;*/
 }
 
@@ -42,19 +41,22 @@ html, body, #wrapper {
 /*    min-height: 36px;*/
     width: 20%;
     height: 100%;
+    margin-left: 16px;
 /*    background-color: rgb(27, 28, 27);;*/
 /*    border: 2px solid lime;*/
 }
 
 #logo {
     padding-top: 2px;
-    padding-left: 20px;
-    width: 18%;
-    height: 90%;
+    width: 36px;
+    height: 36px;
+/*    box-shadow: 4px 4px 4px 4px rgb(253, 150, 49) inset;*/
+/*    border-radius: 100%;*/
 /*    border: 2px solid lime;*/
 }
 
 #logo-text {
+    width: 80%;
     color: rgb(253, 150, 49);
     font-family: monospace;
     font-size: 32px;
@@ -70,8 +72,8 @@ html, body, #wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 65%;
-    max-width: 540px;
+    width: 60%;
+    max-width: 400px;
 /*    max-width: 800px;*/
     height: 100%;
 
@@ -80,7 +82,7 @@ html, body, #wrapper {
 .action-btn {
     border: none;
     color: white;
-    padding: 0px 14px;
+    padding: 0px 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -100,13 +102,13 @@ html, body, #wrapper {
 #btn-run { 
     color: lime;
     background-color: rgb(27, 28, 27);
-    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
+    box-shadow: 0 0 1px 1px gray inset;
 }
 
 #btn-stop { 
     color: red;
     background-color: rgb(27, 28, 27);
-    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
+    box-shadow: 0 0 1px 1px gray inset;
 }
 
 #btn-run:disabled,
@@ -131,7 +133,7 @@ html, body, #wrapper {
     cursor: pointer;
     margin: 6px;
     background-color: rgb(27, 28, 27);;
-    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
+/*    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;*/
     border-radius: 6px;
 /*    text-shadow: 1px 1px 2px ;*/
 
@@ -174,7 +176,7 @@ html, body, #wrapper {
 
 #container {
     position: relative;
-    width: 98%;
+    width: 100%;
 /*    height: 100%;*/
 }
 
@@ -187,7 +189,7 @@ html, body, #wrapper {
     bottom: 30%;
     width: 97%;
     background-color: black;;
-    box-shadow: 0 0 1px 1px rgb(253, 150, 49);
+/*    box-shadow: 0 0 1px 1px rgb(253, 150, 49);*/
     border-radius: 6px;
     margin: 8px 0px 2px 10px;
 }
@@ -197,17 +199,17 @@ html, body, #wrapper {
     justify-content: space-around;*/
     bottom: 0;
     height: 29%;
-    width: 100%;
+    width: 97%;
     background-color: rgb(27, 28, 27);
 /*    border: 2px solid green;*/
 }
 
 #terminal_screen {
-    width: 97%;
-    height: 90%;
+    width: 100%;
+    height: 85%;
     overflow: auto;
     background-color: black;;
-    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
+/*    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;*/
     border-radius: 6px;
     margin: 0px 10px 0px;
 /*    margin: auto;*/
