--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,6 @@
 html, body, #wrapper {
-/*    display: flex;
-    flex-direction: column;
-    justify-content: space-between;*/
     background-color: rgb(27, 28, 27);
     width: 100%;
-/*    min-height: 400px;*/
     height: 100%;
     margin: 0;
     padding: 0;
@@ -22,37 +18,24 @@ html, body, #wrapper {
     flex-direction: row;
     justify-content: space-between; 
     width: 98%;
-/*    top:1px;*/
-/*    bottom: 1px;*/
     height: 40px;
-/*    background-color: rgb(27, 28, 27);*/
     background-color: rgb(27, 28, 27);;
-/*    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;*/
-/*    border-radius: 8px;*/
-/*    padding-right: -20px;*/
     margin: 2px 0px 0px 6px;
-/*    border: 2px solid pink;*/
 }
 
 #logopane {
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-/*    min-height: 36px;*/
     width: 20%;
     height: 100%;
     margin-left: 16px;
-/*    background-color: rgb(27, 28, 27);;*/
-/*    border: 2px solid lime;*/
 }
 
 #logo {
     padding-top: 2px;
     width: 36px;
     height: 36px;
-/*    box-shadow: 4px 4px 4px 4px rgb(253, 150, 49) inset;*/
-/*    border-radius: 100%;*/
-/*    border: 2px solid lime;*/
 }
 
 #logo-text {
@@ -63,9 +46,7 @@ html, body, #wrapper {
     margin: auto;
     padding-left: 5px;
     text-shadow: 1px 1px 2px rgb(253, 150, 49);
-/*    border: 2px solid lime;*/
 
-/*    border: 2px solid lime;*/
 }
 
 #actionpane {
@@ -74,7 +55,6 @@ html, body, #wrapper {
     justify-content: space-around;
     width: 60%;
     max-width: 400px;
-/*    max-width: 800px;*/
     height: 100%;
 
 }
@@ -87,16 +67,13 @@ html, body, #wrapper {
     text-decoration: none;
     display: inline-block;
     font-size: 12px;
-/*    margin: auto;*/
     cursor: pointer;
     margin: 6px;
-/*    margin-left: 10px;*/
     font-weight: bold;
     border-radius: 8px;
     background-color: rgb(27, 28, 27);;
     box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;
     border-radius: 6px;
-/*    text-shadow: 1px 1px 4px 4px rgb(253, 150, 49);*/
 }
 
 #btn-run { 
@@ -106,6 +83,7 @@ html, body, #wrapper {
 }
 
 #btn-stop { 
+    display: none; /* Only visible when code running -> inline */
     color: red;
     background-color: rgb(27, 28, 27);
     box-shadow: 0 0 1px 1px gray inset;
@@ -133,9 +111,7 @@ html, body, #wrapper {
     cursor: pointer;
     margin: 6px;
     background-color: rgb(27, 28, 27);;
-/*    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;*/
     border-radius: 6px;
-/*    text-shadow: 1px 1px 2px ;*/
 
 }
 
@@ -162,10 +138,7 @@ html, body, #wrapper {
 
 
 #fileexplorer-wrapper {
-/*    float: left;*/
-/*    min-width: 200px;*/
     width: 2%;
-/*    min-height: 400px;*/
     height: 99%;
     margin: 6px 0px 0px 6px;
 
@@ -177,7 +150,6 @@ html, body, #wrapper {
 #container {
     position: relative;
     width: 100%;
-/*    height: 100%;*/
 }
 
 #editor, #terminal {
@@ -189,7 +161,6 @@ html, body, #wrapper {
     bottom: 30%;
     width: 97%;
     background-color: black;;
-/*    box-shadow: 0 0 1px 1px rgb(253, 150, 49);*/
     border-radius: 6px;
     margin: 8px 0px 2px 10px;
 }
@@ -201,7 +172,6 @@ html, body, #wrapper {
     height: 29%;
     width: 97%;
     background-color: rgb(27, 28, 27);
-/*    border: 2px solid green;*/
 }
 
 #terminal_screen {
@@ -209,38 +179,31 @@ html, body, #wrapper {
     height: 85%;
     overflow: auto;
     background-color: black;;
-/*    box-shadow: 0 0 1px 1px rgb(253, 150, 49) inset;*/
     border-radius: 6px;
     margin: 0px 10px 0px;
-/*    margin: auto;*/
-/*    max-height: 100%;*/
-    -ms-overflow-style: none; /* for Internet Explorer, Edge */
-    scrollbar-width: none; /* for Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     overflow-y: scroll; 
     padding-top: 8px;
     padding-bottom: 8px;
 }
 
 #terminal_screen::-webkit-scrollbar {
-    display: none; /* for Chrome, Safari, and Opera */
+    display: none;
 }
 
 
 
 
-/* Tweaking API default styles */
 .CodeMirror {
     border-radius: 6px;
-/*    font-family: monospace;*/
     font-size: 16px;
     height: 100%;
-/*    width: 100%;*/
 }
 
 .CodeMirror-gutter {
     min-width: 1em; 
     cursor: pointer;
-/*    padding: 10px;*/
 }
 
 /* .CodeMirror-foldgutter {
