--- a/public/style.css
+++ b/public/style.css
@@ -76,6 +76,12 @@ html, body, #wrapper {
     border-radius: 6px;
 }
 
+#btn-save { 
+    color: rgb(253, 150, 49);
+    background-color: rgb(27, 28, 27);
+    box-shadow: 0 0 1px 1px gray inset;
+}
+
 #btn-run { 
     color: lime;
     background-color: rgb(27, 28, 27);
@@ -107,6 +113,7 @@ html, body, #wrapper {
 .action-selector {
     padding: 0px 8px;
     color: rgb(253, 150, 49);
+    font-size: 0.75em;
     font-weight: bold;
     cursor: pointer;
     margin: 6px;
@@ -115,6 +122,10 @@ html, body, #wrapper {
 
 }
 
+#saveicon {
+    color: inherit;
+    font-size: 1.25em;
+}
 
 #runicon {
     color: inherit;
@@ -165,9 +176,6 @@ html, body, #wrapper {
     margin: 8px 0px 2px 10px;
 }
 #terminal {
-    /*display: flex;
-    flex-direction: row;
-    justify-content: space-around;*/
     bottom: 0;
     height: 29%;
     width: 97%;
@@ -178,7 +186,7 @@ html, body, #wrapper {
     width: 100%;
     height: 85%;
     overflow: auto;
-    background-color: black;;
+    background-color: rgb(10, 10, 10);;
     border-radius: 6px;
     margin: 0px 10px 0px;
     -ms-overflow-style: none;
@@ -194,10 +202,10 @@ html, body, #wrapper {
 
 
 
-
 .CodeMirror {
     border-radius: 6px;
     font-size: 16px;
+    font-family: 'courier';
     height: 100%;
 }
 
