--- a/public/style.css
+++ b/public/style.css
@@ -52,7 +52,7 @@ html, body, #wrapper {
 #actionpane {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: right;
     width: 60%;
     max-width: 400px;
     height: 100%;
@@ -95,6 +95,13 @@ html, body, #wrapper {
     box-shadow: 0 0 1px 1px gray inset;
 }
 
+#btn-collapse { 
+    display: inline; /* Only visible when code running -> inline */
+    color: rgb(253, 150, 49);
+    background-color: rgb(27, 28, 27);
+    box-shadow: 0 0 1px 1px gray inset;
+}
+
 #btn-run:disabled,
 #btn-run[disabled]{
     color: gray;
@@ -111,15 +118,16 @@ html, body, #wrapper {
 
 
 .action-selector {
-    padding: 0px 8px;
+    display: none;
+    padding: 0px 4px;
     color: rgb(253, 150, 49);
     font-size: 0.75em;
     font-weight: bold;
     cursor: pointer;
     margin: 6px;
+    margin-right: 0px;
     background-color: rgb(27, 28, 27);;
     border-radius: 6px;
-
 }
 
 #saveicon {
@@ -135,6 +143,11 @@ html, body, #wrapper {
 #stopicon {
     color: inherit;
     font-size: 1em;
+}
+
+#collapseicon {
+    color: inherit;
+    font-size: 1.25em;
 }
 
 
